add allowJs option as true

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "files": [],
+  "compilerOptions": {
+    
+    "allowJs": true,
+    
+  },
   "references": [
     {
       "path": "./tsconfig.config.json"
